test: retire CN_11_12 fixtures via TssBlockSigner harness (#3377)
Retires most of the committed CN_11_12_TSS_WRAPS and SCHNORR .blk.gz
fixtures by generating equivalent TSS-signed blocks at test time via
TssBlockSigner + three new harness classes.

Harness infrastructure:
  - TestBlockBuilder.generateGenesisBlockWithSignedTransaction /
    generateBlockWithSignedTransaction embed a signed-transaction item so
    verifiers self-provision TSS state or tampering tests have something to
    mutate.
  - HarnessChainBuilder (block-verification test-scoped) emits a chain of
    TSS-signed TestBlocks with correctly-chained previousBlockRootHash /
    rootHashOfAllBlockHashesTree footers and real BlockProof signatures.
    create(signer) factory uses an isolated MetricRegistry to avoid
    collisions with plugin-registered metrics.
  - LegacyHarnessChainBuilder (verification test-scoped) parallels the above
    for the legacy module, using ExtendedMerkleTreeSession.processBlockItems
    for root-hash computation (the legacy module can't see block-verification).
  - StateProofChainBuilder emits gap blocks whose BlockProof carries a valid
    indirect StateProof (3-path [timestampLeaf+sibling, hashLeaf(gapRoot)+
    sibling, joinPoint] shape) plus a TssSignedBlockProof over the
    reconstructed signed root. Matches the statePaths contract enforced by
    StateProofVerifier.
  - Two smoke tests prove the harnesses work end-to-end.

Migrated ~50 unique test methods (400+ executions counting @RepeatedTest):
  block-verification:
    - SignerTssVerificationTest extended (settled-WRAPS accept + tampered-sig)
    - TSSVerifierTest deleted (all 4 covered by SignerTssVerificationTest)
    - StateProofVerifierTest (23 executions)
    - VerificationServicePluginTest WRAPS (9) + LiveRB (2) + BlockOrder
      (2 x @RepeatedTest(100), class-level cached deterministic signer to
      avoid rerunning the hinTS ceremony 200 times) + StateProof (9) nests
  verification (legacy):
    - TssBloc